# ComposeNativeWebview

./: README.md  settings.gradle.kts
demo-shared/: build.gradle.kts
demo-shared/src/commonMain/kotlin/io/github/kdroidfilter/webview/demo/: App.kt  DemoToolsPanel.kt
demo-shared/src/wasmJsMain/kotlin/io/github/kdroidfilter/webview/demo/: DemoUtils.wasmJs.kt  PlatformInfo.wasmJs.kt
demo-wasmJs/: build.gradle.kts
demo-wasmJs/src/wasmJsMain/kotlin/io/github/kdroidfilter/webview/demo/: main.kt
demo-wasmJs/src/wasmJsMain/resources/: index.html
gradle/: libs.versions.toml
webview-compose/: build.gradle.kts
webview-compose/src/androidMain/kotlin/io/github/kdroidfilter/webview/web/: AndroidWebView.kt
webview-compose/src/commonMain/kotlin/io/github/kdroidfilter/webview/cookie/: Cookie.kt
webview-compose/src/commonMain/kotlin/io/github/kdroidfilter/webview/jsbridge/: JsMessage.kt  JsMessageParsing.kt
webview-compose/src/commonMain/kotlin/io/github/kdroidfilter/webview/setting/: PlatformWebSettings.kt
webview-compose/src/commonMain/kotlin/io/github/kdroidfilter/webview/web/: IWebView.kt  WebContent.kt  WebViewNavigator.kt  WebViewState.kt
webview-compose/src/iosMain/kotlin/io/github/kdroidfilter/webview/web/: IOSWebView.kt
webview-compose/src/jvmMain/kotlin/io/github/kdroidfilter/webview/cookie/: Cookie.desktop.kt  WryCookieManager.kt
wrywebview/: Cargo.toml
wrywebview/src/main/kotlin/io/github/kdroidfilter/webview/wry/: WryWebViewPanel.kt
wrywebview/src/main/rust/: lib.rs  state.rs
(+11 files in other folders)
